Fix ticket status alignment issues.

--- a/trac-files/common/css/ticket.css
+++ b/trac-files/common/css/ticket.css
@@ -156,6 +156,14 @@ fieldset.radio legend {
 }
 fieldset.radio label { padding-right: 1em }
 
+.ticket h1 .title {
+    vertical-align: middle;
+}
+
+.ticket h1 .statuses {
+    float: right;
+}
+
 .ticket h1 .status,
 .ticket h1 .type,
 .ticket h1 .resolution {
@@ -166,8 +174,7 @@ fieldset.radio label { padding-right: 1em }
     vertical-align: middle;
     border-bottom: 2px solid #444;
     border-radius: 0.35em;
-    float: right;
-    margin: -0.35em 0.5em 0 0;
+    margin: 0 0.25em 0 0;
 }
 
 .ticket h1 .status {
